force-app/main/default/objects/Book_Copy__c/Book_Copy__c.object-meta.xml
<CustomObject>
    <description>The Book to which the physical book copy belongs.</description>
    <label>Book Copy</label>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Book Copies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>