force-app/main/default/objects/Book_Copy__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <description>Relationship between meta-data of a book to its related physical copies.</description>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Book</relationshipLabel>
    <relationshipName>Book_Copies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>