force-app/main/default/objects/Book_Copy__c/fields/Book_Copies__c.field-meta.xml
<CustomField>
    <fullName>Book_Copies__c</fullName>
    <description>Relationship between meta-data of a book to its related physical copies.</description>
    <label>Book Copies</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Book Copies</relationshipLabel>
    <relationshipName>Book_Copies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>